<resources>
    <string name="app_name" translatable="false">Twist the tongue</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment" translatable="false">Hello blank fragment</string>
    <string name="grade">Grade:</string>
    <string name="example_text">Peter piper ate a pick of pickled\npeppers</string>
    <string name="sample_text" translatable="false">Sample text</string>
    <string name="patters">Patters</string>
    <string name="favorites">Favorites</string>
    <string name="statistics">Statistics</string>
    <string name="info">Info</string>
    <string name="visited_patters">Visited patters:</string>
    <string name="favorite_patter">Favorite patter:</string>
    <string name="average_mark">Average mark:</string>
    <string name="total_visits">Total visits:</string>
    <string name="label_main_menu">Main Menu</string>
    <string name="label_patter_list">Tongue Twisters</string>
    <string name="label_favorites">Favorites</string>
    <string name="label_patter">Tongue Twister</string>
    <string name="label_statistics">Statistics</string>
    <string name="night_mode">Night mode</string>
    <string name="day_mode">Day mode</string>
</resources>
