<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">



    <ru.alexander.twistthetongue.view.MainScreenButtonView
        android:id="@+id/patterListButton"
        android:layout_width="0dp"
        android:layout_height="128dp"
        android:layout_margin="16dp"
        android:background="@drawable/patter_bck"
        android:elevation="12dp"
        android:src="@drawable/ic_view_list"
        android:text="@string/patters"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ru.alexander.twistthetongue.view.MainScreenButtonView
        android:id="@+id/favoritePattersButton"
        android:layout_width="0dp"
        android:layout_height="128dp"
        android:layout_margin="16dp"
        android:background="@drawable/patter_bck"
        android:elevation="12dp"
        android:src="@drawable/ic_star"
        android:text="@string/favorites"
        app:layout_constraintTop_toBottomOf="@id/patterListButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />


    <ru.alexander.twistthetongue.view.MainScreenButtonView
        android:id="@+id/statisticsButton"
        android:layout_width="0dp"
        android:layout_height="128dp"
        android:layout_margin="16dp"
        android:background="@drawable/patter_bck"
        android:elevation="12dp"
        android:src="@drawable/ic_check_box"
        android:text="@string/statistics"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/favoritePattersButton"/>

    <ru.alexander.twistthetongue.view.MainScreenButtonView
        android:id="@+id/informationButton"
        android:layout_width="0dp"
        android:layout_height="128dp"
        android:layout_margin="16dp"
        android:background="@drawable/patter_bck"
        android:elevation="12dp"
        android:src="@drawable/ic_info"
        android:text="@string/info"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/statisticsButton" />

    <Space
        android:layout_width="match_parent"
        android:layout_height="200dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/statisticsButton" />

</androidx.constraintlayout.widget.ConstraintLayout>